# python-timsdk

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup_imsdk_lib.sh  tim_lib_bootstrap.py  uv.toml
timsdk/: __init__.py  callbacks.py  enums.py  library.py  manager.py  utils.py
