[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "timsdk"
authors = [{ name = "SoulMelody", email = "yjxrtzyx@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.5"
version = "0.0.1"
dynamic = ["description"]
dependencies = ["loguru >= 0.6.0"]

[project.urls]
Home = "https://github.com/SoulMelody/python-timsdk"

[tool.flit.sdist]
include = ["LICENSE", "LICENSE.BSD", "LICENSE.APACHE", "tim_lib_bootstrap.py"]
exclude = ["requirements*.txt", ".gitignore"]
